Fix layout on small devices

--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -23,8 +23,12 @@
   }
   
 
-  @media (max-width: 800px) {
+  @media (max-width: 1000px) {
     .About-Header, .About-Image {
       flex: 100%;
+    }
+
+    .About-Section{
+      padding:20px;
     }
   }
