--- a/src/sections/Contact/Contact.css
+++ b/src/sections/Contact/Contact.css
@@ -24,9 +24,12 @@
   }
   
 
-  @media (max-width: 800px) {
+  @media (max-width: 1000px) {
     .Contact-Header, .Contact-Image {
       flex: 100%;
+    }
+    .Contact-Section{
+      padding:20px;
     }
   }
 
